RHIROS 463 - Remove io_wait metric (#165)
